# djanfo_tree_menu

./: db.sqlite3  pyproject.toml
django_tree/: asgi.py  settings.py  urls.py  wsgi.py
django_tree/django_menu/: admin.py  apps.py  models.py
django_tree/django_menu/migrations/: 0001_initial.py  0002_alter_item_options.py
django_tree/django_menu/templatetags/: draw_menu.py
django_tree/templates/menu/: draw_menu.html  index.html
