[tool.poetry]
name = "tree-menu"
version = "0.1.0"
description = ""
authors = ["kalldrek777 <kalldrek@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
